# Sentiment-Analysis-Project-IMDB-50K-Movie-Reviews

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  template.py
app/: streamlit_app.py
configs/: config.yaml  logging_config.yaml  params.yaml
scripts/: download_data.py  prepare_data.py  run_eda.py  run_eval.py  run_infer.py  run_train.py
src/sentiment_analysis_project/: __init__.py
src/sentiment_analysis_project/config/: configuration.py
src/sentiment_analysis_project/constants/: constants.py
src/sentiment_analysis_project/data/: kaggle_downloader.py  loader.py  splitter.py
src/sentiment_analysis_project/eda/: eda.py
src/sentiment_analysis_project/entity/: config_entity.py
src/sentiment_analysis_project/eval/: evaluator.py
src/sentiment_analysis_project/features/: vectorizers.py
src/sentiment_analysis_project/infer/: predictor.py
src/sentiment_analysis_project/models/: factory.py  registry.py
src/sentiment_analysis_project/preprocessing/: cleaners.py  pipeline.py
src/sentiment_analysis_project/train/: trainer.py
src/sentiment_analysis_project/utils/: common.py  logger.py
src/sentiment_analysis_project/visualize/: plots.py
tests/: conftest.py  test_evaluator.py  test_models.py  test_pipeline_integration.py  test_preprocessing.py  test_vectorizers.py
