[project]
name = "sentiment-analysis-project"
version = "0.1.0"
description = "Production-quality binary sentiment analysis on the IMDB 50K Movie Reviews dataset"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sentiment Analysis Team" }]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "wordcloud>=1.9",
    "nltk>=3.8",
    "joblib>=1.3",
    "PyYAML>=6.0",
    "kaggle>=1.6",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
app = ["streamlit>=1.32"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentiment_analysis_project"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
